tests/fails/keyword.lt
print(({(function() return 2,3,4,5 end)})[3])

